workspace-sf/force-app/main/default/objects/QuestionarioProduto__c/QuestionarioProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o produto e o questionário</description>
    <label>Questionário do produto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionários do produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>