workspace-sf/force-app/main/default/objects/QuestionarioProduto__c/fields/GarantiaProduto__c.field-meta.xml
<CustomField>
    <fullName>GarantiaProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia do produto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Produto__c</field>
            <operation>equals</operation>
            <valueField>GarantiaProduto__c.Produto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Questionários do produto</relationshipLabel>
    <relationshipName>QuestionariosProduto</relationshipName>
    <type>Lookup</type>
</CustomField>