workspace-sf/force-app/main/default/objects/QuestionarioProduto__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <inlineHelpText>Refere-se a prioridade de apresentação de questionário caso haja seleção de mais de uma garantia com questionários distintos.</inlineHelpText>
    <label>Prioridade da apresentação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>