workspace-sf/force-app/main/default/objects/QuestionarioProduto__c/fields/Questionario__c.field-meta.xml
<CustomField>
    <fullName>Questionario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionário</label>
    <referenceTo>Questionario__c</referenceTo>
    <relationshipLabel>Questionários do produto</relationshipLabel>
    <relationshipName>QuestionariosProduto</relationshipName>
    <type>Lookup</type>
</CustomField>